--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+
+
     body{margin:0;}
     h1{text-align: center;
       font-size: 30px;
+      font-family: 'Bungee Spice', cursive;
+    }
+    h2{text-align: center;
+      font-size: 15px;
+      font-family: 'Bungee Spice', cursive;
     }
     .head{
     display: flex;
@@ -16,15 +26,32 @@
     text-align: center;
     justify-content: start;
     }
-    p{
-      border: 2px solid skyblue;
-
+    p{font-family: 'Roboto', sans-serif;
     }
     div{width:100%;
     height:100%;
     display:flex;
     align-items: space-between;
-    justify-content: center;}
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    
+  }
+    .box{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: start;
+      box-shadow:
+        0.8px 1.4px 1.7px rgba(0, 0, 0, 0.022),
+        1.8px 3.3px 4.2px rgba(0, 0, 0, 0.032),
+        3.3px 5.9px 7.9px rgba(0, 0, 0, 0.04),
+        5.5px 9.9px 14.1px rgba(0, 0, 0, 0.048),
+        9.5px 17px 26.3px rgba(0, 0, 0, 0.058),
+        20px 36px 63px rgba(0, 0, 0, 0.08)
+;
+
+    }
+    
     canvas{
 
 
@@ -34,21 +61,37 @@
     }
   </style>
 </head>
+
 <body>
   <div>
     <div class="head">
-      <h1>비둘기를 피해라!
-        <br>
-        쫄보
-        <br>
-        독수리</h1>
-      <p>SPACE BAR= 날기</p>
-      <p id = "text2">timer</p>
-      <p id= "score">0</p>
+      <h1>Avoid pigeons</h1>
+      <div class="box">
+        <p>SPACE BAR= FLY</p>
+        <p>CLICK= picking up feathers</p>
+      </div>
+      <div class="box">
+       <h2>Timer</h2>
+       <p id = "text2">
+        timer
+       </p>
+      </div>
+      <div class="box">
+        <h2>collected feathers</h2>
+       <div id= "display">
+        0
+       </div>
+      </div>
+      <div class="box">
+        <h2>MY SCORE</h2>
+        <div id= "display2">0</div>
+      </div>
+
     </div>
     <canvas id="canvas">
     </canvas>
     <script src="main.js"></script>
+   
   </div>
 
   
